Schedules API (#173)
* Add describeSchedule route

* Get schedule route working

* Add patch route

* Add update/create/delete. COMMENTED OUT CRSF for now

* Add back csrf config

* Update api for schedules

* Change protos to refer to generated files within this repo, instead of the api-go repo (#169)


* Change PatchSchedule to patch call

* Add supportsSchedules flag
