# server/generated/api/namespace/v1/message.pb.go
@@ -10,7 +10,7 @@ import (
 	github_com_gogo_protobuf_sortkeys "github.com/gogo/protobuf/sortkeys"
 	_ "github.com/gogo/protobuf/types"
 	github_com_gogo_protobuf_types "github.com/gogo/protobuf/types"
-	v1 "go.temporal.io/api/enums/v1"
+	v1 "github.com/temporalio/ui-server/v2/server/generated/api/enums/v1"
 	io "io"
 	math "math"
 	math_bits "math/bits"
@@ -39,6 +39,9 @@ type NamespaceInfo struct {
 	// A key-value map for any customized purpose.
 	Data map[string]string `protobuf:"bytes,5,rep,name=data,proto3" json:"data,omitempty" protobuf_key:"bytes,1,opt,name=key,proto3" protobuf_val:"bytes,2,opt,name=value,proto3"`
 	Id   string            `protobuf:"bytes,6,opt,name=id,proto3" json:"id,omitempty"`
+	// Whether scheduled workflows are supported on this namespace. This is only needed
+	// temporarily while the feature is experimental, so we can give it a high tag.
+	SupportsSchedules bool `protobuf:"varint,100,opt,name=supports_schedules,json=supportsSchedules,proto3" json:"supports_schedules,omitempty"`
 }
 
 func (m *NamespaceInfo) Reset()      { *m = NamespaceInfo{} }
@@ -113,6 +116,13 @@ func (m *NamespaceInfo) GetId() string {
 		return m.Id
 	}
 	return ""
+}
+
+func (m *NamespaceInfo) GetSupportsSchedules() bool {
+	if m != nil {
+		return m.SupportsSchedules
+	}
+	return false
 }
 
 type NamespaceConfig struct {
@@ -391,58 +401,61 @@ func init() {
 }
 
 var fileDescriptor_cb8d87cc59c3faa9 = []byte{
-	// 807 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x55, 0x4f, 0x4f, 0x3b, 0x45,
-	0x18, 0xee, 0x6c, 0x5b, 0xf2, 0x63, 0xf6, 0x07, 0x9a, 0x11, 0xa1, 0x6d, 0x70, 0x69, 0x1a, 0xd1,
-	0x7a, 0x70, 0x6a, 0xab, 0x51, 0x52, 0x12, 0x93, 0x56, 0x30, 0x21, 0x51, 0x43, 0x2a, 0x70, 0xe0,
-	0x52, 0xa7, 0xdd, 0xe9, 0x76, 0xc2, 0xee, 0xce, 0x66, 0x76, 0x5a, 0xec, 0xcd, 0x93, 0x67, 0x8e,
-	0x1e, 0xfc, 0x00, 0xc6, 0xb3, 0x9f, 0xc1, 0x70, 0xe4, 0xc8, 0x4d, 0x29, 0x17, 0xe3, 0xc1, 0xf0,
-	0x11, 0xcc, 0xce, 0xfe, 0x69, 0x97, 0x02, 0x82, 0xb7, 0x79, 0xdf, 0x79, 0xde, 0x67, 0xde, 0x7f,
-	0xfb, 0x2c, 0x7c, 0x5f, 0x52, 0xc7, 0xe3, 0x82, 0xd8, 0x35, 0xe2, 0xb1, 0x9a, 0x4b, 0x1c, 0xea,
-	0x7b, 0xa4, 0x4f, 0x6b, 0xe3, 0x7a, 0xcd, 0xa1, 0xbe, 0x4f, 0x2c, 0x8a, 0x3d, 0xc1, 0x25, 0x47,
-	0xc5, 0x18, 0x88, 0x89, 0xc7, 0x70, 0x02, 0xc4, 0xe3, 0x7a, 0xc9, 0xb0, 0x38, 0xb7, 0x6c, 0x5a,
-	0x53, 0xc0, 0xde, 0x68, 0x50, 0x33, 0x47, 0x82, 0x48, 0xc6, 0xdd, 0x30, 0xb4, 0xb4, 0x75, 0xff,
-	0x5e, 0x32, 0x87, 0xfa, 0x92, 0x38, 0x5e, 0x04, 0xf8, 0xd0, 0x62, 0x72, 0x38, 0xea, 0xe1, 0x3e,
-	0x77, 0x6a, 0x16, 0xb7, 0xf8, 0x0c, 0x19, 0x58, 0xca, 0x50, 0xa7, 0x08, 0xbe, 0x9d, 0xca, 0x99,
-	0xba, 0x23, 0xc7, 0x0f, 0xf2, 0x9d, 0xe5, 0xa4, 0x60, 0x95, 0xdf, 0x34, 0xb8, 0xf2, 0x4d, 0xec,
-	0x3b, 0x70, 0x07, 0x1c, 0x21, 0x98, 0x0b, 0x40, 0x05, 0x50, 0x06, 0xd5, 0xe5, 0x8e, 0x3a, 0xa3,
-	0x5d, 0x98, 0xf7, 0x25, 0x91, 0xb4, 0xa0, 0x95, 0x41, 0x75, 0xb5, 0xb1, 0x8d, 0x53, 0x75, 0x2a,
-	0x72, 0x3c, 0xae, 0xe3, 0x84, 0xe8, 0xdb, 0x00, 0xdc, 0x09, 0x63, 0x50, 0x19, 0xea, 0x26, 0xf5,
-	0xfb, 0x82, 0x79, 0x41, 0xb9, 0x85, 0xac, 0xe2, 0x9d, 0x77, 0xa1, 0x2d, 0xa8, 0xf3, 0x73, 0x97,
-	0x8a, 0x2e, 0x75, 0x08, 0xb3, 0x0b, 0x39, 0x85, 0x80, 0xca, 0xb5, 0x1f, 0x78, 0xd0, 0x97, 0x30,
-	0x67, 0x12, 0x49, 0x0a, 0xf9, 0x72, 0xb6, 0xaa, 0x37, 0x1a, 0xf8, 0xd1, 0x36, 0xe3, 0x54, 0x2d,
-	0x78, 0x8f, 0x48, 0xb2, 0xef, 0x4a, 0x31, 0xe9, 0xa8, 0x78, 0xb4, 0x0a, 0x35, 0x66, 0x16, 0x96,
-	0x14, 0xbf, 0xc6, 0xcc, 0xd2, 0x67, 0x70, 0x39, 0x81, 0xa0, 0x37, 0x61, 0xf6, 0x8c, 0x4e, 0xa2,
-	0xba, 0x83, 0x23, 0x5a, 0x83, 0xf9, 0x31, 0xb1, 0x47, 0x61, 0xd9, 0xcb, 0x9d, 0xd0, 0x68, 0x6a,
-	0x3b, 0xa0, 0xf2, 0x4f, 0x16, 0xbe, 0x91, 0x3c, 0xf5, 0x05, 0x77, 0x07, 0xcc, 0x42, 0x43, 0x58,
-	0x3e, 0xe7, 0xe2, 0x6c, 0x60, 0xf3, 0xf3, 0x2e, 0xfd, 0x9e, 0xf6, 0x47, 0x41, 0x6d, 0x5d, 0x41,
-	0x25, 0x75, 0xd5, 0x49, 0x4a, 0x5b, 0x91, 0xeb, 0x8d, 0x22, 0x0e, 0x87, 0x8d, 0xe3, 0x11, 0xe2,
-	0xbd, 0x68, 0x19, 0xda, 0xb9, 0x9f, 0xfe, 0xd8, 0x02, 0x9d, 0x77, 0x62, 0xa2, 0xfd, 0x98, 0xa7,
-	0x13, 0xd3, 0x1c, 0x49, 0x1b, 0x1d, 0xc0, 0xd7, 0x3d, 0x62, 0x76, 0x7b, 0xcc, 0x25, 0x82, 0x51,
-	0x5f, 0xa5, 0xa7, 0x37, 0xde, 0x7b, 0xa2, 0x2d, 0x6d, 0x62, 0xb6, 0x23, 0x74, 0x47, 0xef, 0xcd,
-	0x0c, 0x74, 0x0a, 0xd7, 0x87, 0xcc, 0x97, 0x5c, 0x4c, 0xba, 0x44, 0xf4, 0x87, 0x6c, 0x4c, 0xec,
-	0x6e, 0x38, 0xea, 0xac, 0x1a, 0xf5, 0xbb, 0x8f, 0x8c, 0xba, 0x15, 0x81, 0xc3, 0x49, 0xaf, 0x45,
-	0x1c, 0x29, 0x2f, 0xfa, 0x08, 0xae, 0x2d, 0x70, 0x8f, 0x04, 0x8b, 0xe6, 0x8b, 0xee, 0xc5, 0x1c,
-	0x0b, 0x86, 0xbe, 0x83, 0xc5, 0x31, 0xf3, 0x59, 0x8f, 0xd9, 0x4c, 0x2e, 0x24, 0x94, 0x7f, 0x41,
-	0x42, 0x1b, 0x33, 0x9a, 0x74, 0x4e, 0x9f, 0xc2, 0x8d, 0x87, 0x5e, 0x08, 0xd2, 0x0a, 0xd7, 0xe2,
-	0xed, 0xc5, 0xc8, 0x63, 0xc1, 0x2a, 0xbf, 0x03, 0xa8, 0xcf, 0x35, 0x11, 0x1d, 0xc2, 0x57, 0x49,
-	0xfb, 0x81, 0xda, 0xca, 0x4f, 0x9e, 0xd7, 0x7e, 0x1c, 0x1f, 0xc2, 0xbd, 0x4c, 0x58, 0x4a, 0x14,
-	0xae, 0xa4, 0xae, 0x1e, 0xd8, 0xc7, 0xcf, 0xe7, 0xf7, 0x51, 0x6f, 0x54, 0x9f, 0xf1, 0xe2, 0x24,
-	0xf8, 0x0e, 0xe6, 0x37, 0xf7, 0x47, 0x00, 0x57, 0x52, 0x97, 0x68, 0x1d, 0x2e, 0x09, 0x4a, 0x7c,
-	0xee, 0x46, 0x4f, 0x45, 0x16, 0x2a, 0xc1, 0x57, 0xdc, 0xa3, 0x82, 0x48, 0x2e, 0xa2, 0x0f, 0x20,
-	0xb1, 0x51, 0x0b, 0xea, 0x7d, 0x41, 0x89, 0xa4, 0xdd, 0x40, 0xa6, 0xd4, 0xae, 0xe8, 0x8d, 0xd2,
-	0xc2, 0x5a, 0x1f, 0xc5, 0x1a, 0xd6, 0xce, 0x5d, 0x04, 0x7b, 0x0d, 0xc3, 0xa0, 0xc0, 0x5d, 0xf9,
-	0x59, 0x83, 0x6f, 0x1d, 0x7b, 0x26, 0x91, 0x34, 0xad, 0x3f, 0xf7, 0xe4, 0x02, 0xfc, 0xa7, 0x5c,
-	0x68, 0x0b, 0x72, 0xf1, 0x55, 0x24, 0x17, 0x59, 0x35, 0x98, 0x9d, 0x27, 0xda, 0xf4, 0x40, 0x02,
-	0x0b, 0xa2, 0x91, 0x88, 0x5f, 0xee, 0xe5, 0xe2, 0xf7, 0xbf, 0x15, 0xa6, 0x7d, 0x09, 0xae, 0x6e,
-	0x8c, 0xcc, 0xf5, 0x8d, 0x91, 0xb9, 0xbb, 0x31, 0xc0, 0x0f, 0x53, 0x03, 0xfc, 0x32, 0x35, 0xc0,
-	0xe5, 0xd4, 0x00, 0x57, 0x53, 0x03, 0xfc, 0x39, 0x35, 0xc0, 0x5f, 0x53, 0x23, 0x73, 0x37, 0x35,
-	0xc0, 0xc5, 0xad, 0x91, 0xb9, 0xba, 0x35, 0x32, 0xd7, 0xb7, 0x46, 0x06, 0x6e, 0x32, 0xfe, 0x78,
-	0xb9, 0xed, 0xd7, 0x5f, 0x87, 0xbf, 0xab, 0xc3, 0x60, 0x40, 0x87, 0xe0, 0xf4, 0x03, 0x6b, 0x0e,
-	0xcd, 0xf8, 0xc2, 0xef, 0x6d, 0x37, 0x31, 0x7e, 0xd5, 0x8a, 0x47, 0x31, 0xb0, 0xe5, 0xb1, 0x59,
-	0xb5, 0xf8, 0xa4, 0xfe, 0xb7, 0xb6, 0x19, 0xdf, 0x35, 0x9b, 0x2d, 0x8f, 0x35, 0x9b, 0xc9, 0x6d,
-	0xb3, 0x79, 0x52, 0xef, 0x2d, 0xa9, 0x7d, 0xf8, 0xf8, 0xdf, 0x00, 0x00, 0x00, 0xff, 0xff, 0xe0,
-	0x8b, 0xb2, 0xef, 0x47, 0x07, 0x00, 0x00,
+	// 858 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x55, 0x4f, 0x6f, 0xdc, 0x44,
+	0x14, 0xdf, 0xf1, 0x6e, 0xa2, 0x64, 0xdc, 0x14, 0x18, 0x42, 0xbb, 0x59, 0x15, 0x67, 0x15, 0x51,
+	0xd8, 0x4b, 0xc6, 0xec, 0x82, 0xa0, 0xda, 0x4a, 0x48, 0x59, 0x1a, 0xa4, 0x4a, 0x50, 0x45, 0x6e,
+	0xd2, 0x43, 0x2f, 0x66, 0x76, 0x3d, 0xf1, 0x8e, 0x6a, 0x7b, 0xac, 0x99, 0xb1, 0x43, 0x6e, 0x9c,
+	0x38, 0xf7, 0xc8, 0x81, 0x0f, 0x80, 0xf8, 0x20, 0x88, 0x63, 0x8e, 0xbd, 0x41, 0x36, 0x17, 0x84,
+	0x04, 0xea, 0x47, 0x40, 0x1e, 0xff, 0xd9, 0x75, 0x36, 0x29, 0x2d, 0xb7, 0xf7, 0xe7, 0xf7, 0x7e,
+	0xf3, 0xe6, 0xcd, 0xcf, 0xcf, 0xf0, 0x23, 0x45, 0xc3, 0x98, 0x0b, 0x12, 0xd8, 0x24, 0x66, 0x76,
+	0x44, 0x42, 0x2a, 0x63, 0x32, 0xa1, 0x76, 0xda, 0xb7, 0x43, 0x2a, 0x25, 0xf1, 0x29, 0x8e, 0x05,
+	0x57, 0x1c, 0x6d, 0x95, 0x40, 0x4c, 0x62, 0x86, 0x2b, 0x20, 0x4e, 0xfb, 0x1d, 0xcb, 0xe7, 0xdc,
+	0x0f, 0xa8, 0xad, 0x81, 0xe3, 0xe4, 0xd8, 0xf6, 0x12, 0x41, 0x14, 0xe3, 0x51, 0x5e, 0xda, 0xd9,
+	0xbe, 0x9c, 0x57, 0x2c, 0xa4, 0x52, 0x91, 0x30, 0x2e, 0x00, 0xbb, 0x3e, 0x53, 0xd3, 0x64, 0x8c,
+	0x27, 0x3c, 0xb4, 0x7d, 0xee, 0xf3, 0x39, 0x32, 0xf3, 0xb4, 0xa3, 0xad, 0x02, 0x7e, 0xb7, 0xd6,
+	0x33, 0x8d, 0x92, 0x50, 0x66, 0xfd, 0xce, 0x7b, 0xd2, 0xb0, 0x9d, 0x0b, 0x03, 0x6e, 0x3c, 0x2a,
+	0x63, 0x0f, 0xa3, 0x63, 0x8e, 0x10, 0x6c, 0x65, 0xa0, 0x36, 0xe8, 0x82, 0xde, 0xba, 0xa3, 0x6d,
+	0x74, 0x1f, 0xae, 0x48, 0x45, 0x14, 0x6d, 0x1b, 0x5d, 0xd0, 0xbb, 0x39, 0xb8, 0x8b, 0x6b, 0xf7,
+	0xd4, 0xe4, 0x38, 0xed, 0xe3, 0x8a, 0xe8, 0x71, 0x06, 0x76, 0xf2, 0x1a, 0xd4, 0x85, 0xa6, 0x47,
+	0xe5, 0x44, 0xb0, 0x38, 0xbb, 0x6e, 0xbb, 0xa9, 0x79, 0x17, 0x43, 0x68, 0x1b, 0x9a, 0xfc, 0x24,
+	0xa2, 0xc2, 0xa5, 0x21, 0x61, 0x41, 0xbb, 0xa5, 0x11, 0x50, 0x87, 0xf6, 0xb3, 0x08, 0xfa, 0x0a,
+	0xb6, 0x3c, 0xa2, 0x48, 0x7b, 0xa5, 0xdb, 0xec, 0x99, 0x83, 0x01, 0xbe, 0x76, 0xcc, 0xb8, 0x76,
+	0x17, 0xfc, 0x80, 0x28, 0xb2, 0x1f, 0x29, 0x71, 0xea, 0xe8, 0x7a, 0x74, 0x13, 0x1a, 0xcc, 0x6b,
+	0xaf, 0x6a, 0x7e, 0x83, 0x79, 0x68, 0x17, 0x22, 0x99, 0xc4, 0x31, 0x17, 0x4a, 0xba, 0x72, 0x32,
+	0xa5, 0x5e, 0x12, 0x50, 0xd9, 0xf6, 0xba, 0xa0, 0xb7, 0xe6, 0xbc, 0x53, 0x66, 0x1e, 0x97, 0x89,
+	0xce, 0xe7, 0x70, 0xbd, 0x62, 0x44, 0x6f, 0xc3, 0xe6, 0x33, 0x7a, 0x5a, 0x8c, 0x29, 0x33, 0xd1,
+	0x26, 0x5c, 0x49, 0x49, 0x90, 0xe4, 0x53, 0x5a, 0x77, 0x72, 0x67, 0x68, 0xdc, 0x03, 0x3b, 0xff,
+	0x34, 0xe1, 0x5b, 0x55, 0x67, 0x5f, 0xf2, 0xe8, 0x98, 0xf9, 0x68, 0x0a, 0xbb, 0x27, 0x5c, 0x3c,
+	0x3b, 0x0e, 0xf8, 0x89, 0x4b, 0xbf, 0xa3, 0x93, 0x24, 0x1b, 0x85, 0x2b, 0xa8, 0xa2, 0x91, 0xb6,
+	0x94, 0x0a, 0x34, 0xb9, 0x39, 0xd8, 0xc2, 0xb9, 0x36, 0x70, 0xf9, 0xe2, 0xf8, 0x41, 0xa1, 0x9d,
+	0x51, 0xeb, 0xc7, 0xdf, 0xb7, 0x81, 0xf3, 0x7e, 0x49, 0xb4, 0x5f, 0xf2, 0x38, 0x25, 0xcd, 0xa1,
+	0x0a, 0xd0, 0x43, 0x78, 0x63, 0x4c, 0x3c, 0x77, 0xcc, 0x22, 0x22, 0x18, 0x95, 0xba, 0x3d, 0x73,
+	0xf0, 0xe1, 0x2b, 0xa6, 0x38, 0x22, 0xde, 0xa8, 0x40, 0x3b, 0xe6, 0x78, 0xee, 0xa0, 0xa7, 0xf0,
+	0xd6, 0x94, 0x49, 0xc5, 0xc5, 0xa9, 0x4b, 0xc4, 0x64, 0xca, 0x52, 0x12, 0xb8, 0xb9, 0x32, 0x9a,
+	0x5a, 0x19, 0x1f, 0x5c, 0xa3, 0x8c, 0xbd, 0x02, 0x9c, 0x0b, 0x63, 0xb3, 0xe0, 0xa8, 0x45, 0xd1,
+	0xc7, 0x70, 0x73, 0x89, 0x3b, 0x11, 0xac, 0x90, 0x03, 0xba, 0x54, 0x73, 0x24, 0x18, 0xfa, 0x16,
+	0x6e, 0xa5, 0x4c, 0xb2, 0x31, 0x0b, 0x98, 0x5a, 0x6a, 0x68, 0xe5, 0x0d, 0x1a, 0xba, 0x3d, 0xa7,
+	0xa9, 0xf7, 0xf4, 0x19, 0xbc, 0x7d, 0xd5, 0x09, 0x59, 0x5b, 0xb9, 0x8a, 0xde, 0x5b, 0xae, 0x3c,
+	0x12, 0x6c, 0xe7, 0x57, 0x00, 0xcd, 0x85, 0x21, 0xa2, 0x03, 0xb8, 0x56, 0x8d, 0x1f, 0x68, 0x11,
+	0x7f, 0xfa, 0x7a, 0xe3, 0xc7, 0xa5, 0x91, 0xcb, 0xb8, 0x62, 0xe9, 0x50, 0xb8, 0x51, 0x4b, 0x5d,
+	0xa1, 0xc7, 0x2f, 0x16, 0xf5, 0x68, 0x0e, 0x7a, 0xaf, 0x71, 0xe2, 0x69, 0xf6, 0xd9, 0x2c, 0x2a,
+	0xf7, 0x07, 0x00, 0x37, 0x6a, 0x49, 0x74, 0x0b, 0xae, 0x0a, 0x4a, 0x24, 0x8f, 0x8a, 0xa3, 0x0a,
+	0x0f, 0x75, 0xe0, 0x1a, 0x8f, 0xa9, 0x20, 0x8a, 0x8b, 0xe2, 0x03, 0xa8, 0x7c, 0xb4, 0x07, 0xcd,
+	0x89, 0xa0, 0x44, 0x51, 0x37, 0xdb, 0x6a, 0x5a, 0x2b, 0xe6, 0xa0, 0xb3, 0x24, 0xeb, 0xc3, 0x72,
+	0xe5, 0x8d, 0x5a, 0xcf, 0x33, 0x5d, 0xc3, 0xbc, 0x28, 0x0b, 0xef, 0xfc, 0x64, 0xc0, 0x77, 0x8f,
+	0x62, 0x8f, 0x28, 0x5a, 0x5f, 0x57, 0x97, 0xb6, 0x0b, 0xf8, 0xcf, 0xed, 0x62, 0x2c, 0x6d, 0x97,
+	0xaf, 0x8b, 0xed, 0xd2, 0xd4, 0x0f, 0x73, 0xef, 0x15, 0x63, 0xba, 0xa2, 0x81, 0xa5, 0x1d, 0x53,
+	0xed, 0xca, 0xd6, 0x9b, 0xef, 0xca, 0xff, 0xbd, 0x61, 0x46, 0x7f, 0x83, 0xb3, 0x73, 0xab, 0xf1,
+	0xe2, 0xdc, 0x6a, 0xbc, 0x3c, 0xb7, 0xc0, 0xf7, 0x33, 0x0b, 0xfc, 0x3c, 0xb3, 0xc0, 0x6f, 0x33,
+	0x0b, 0x9c, 0xcd, 0x2c, 0xf0, 0xc7, 0xcc, 0x02, 0x7f, 0xce, 0xac, 0xc6, 0xcb, 0x99, 0x05, 0x9e,
+	0x5f, 0x58, 0x8d, 0xb3, 0x0b, 0xab, 0xf1, 0xe2, 0xc2, 0x6a, 0xc0, 0x3b, 0x8c, 0x5f, 0x7f, 0xdd,
+	0xd1, 0x8d, 0x6f, 0xf2, 0xbf, 0xdb, 0x41, 0xf6, 0x40, 0x07, 0xe0, 0xe9, 0xa3, 0x85, 0x5f, 0x50,
+	0x59, 0xc5, 0xb8, 0x9d, 0xb0, 0x5d, 0x49, 0x45, 0x4a, 0x85, 0x9d, 0x0e, 0xec, 0xc2, 0xf2, 0x69,
+	0x94, 0xbd, 0x3d, 0xf5, 0x96, 0x7e, 0x99, 0xf7, 0x2b, 0xe7, 0x17, 0x63, 0xeb, 0xb0, 0x3c, 0x7b,
+	0x2f, 0x66, 0xf3, 0x91, 0xe0, 0x27, 0xfd, 0xbf, 0x8c, 0x3b, 0x65, 0x6e, 0x38, 0xdc, 0x8b, 0xd9,
+	0x70, 0x58, 0x65, 0x87, 0xc3, 0x27, 0xfd, 0xf1, 0xaa, 0x16, 0xcd, 0x27, 0xff, 0x06, 0x00, 0x00,
+	0xff, 0xff, 0x10, 0x3e, 0xe0, 0x88, 0x9b, 0x07, 0x00, 0x00,
 }
 
 func (this *NamespaceInfo) Equal(that interface{}) bool {
@@ -485,6 +498,9 @@ func (this *NamespaceInfo) Equal(that interface{}) bool {
 		}
 	}
 	if this.Id != that1.Id {
+		return false
+	}
+	if this.SupportsSchedules != that1.SupportsSchedules {
 		return false
 	}
 	return true
@@ -639,7 +655,7 @@ func (this *NamespaceInfo) GoString() string {
 	if this == nil {
 		return "nil"
 	}
-	s := make([]string, 0, 10)
+	s := make([]string, 0, 11)
 	s = append(s, "&namespace.NamespaceInfo{")
 	s = append(s, "Name: "+fmt.Sprintf("%#v", this.Name)+",\n")
 	s = append(s, "State: "+fmt.Sprintf("%#v", this.State)+",\n")
@@ -659,6 +675,7 @@ func (this *NamespaceInfo) GoString() string {
 		s = append(s, "Data: "+mapStringForData+",\n")
 	}
 	s = append(s, "Id: "+fmt.Sprintf("%#v", this.Id)+",\n")
+	s = append(s, "SupportsSchedules: "+fmt.Sprintf("%#v", this.SupportsSchedules)+",\n")
 	s = append(s, "}")
 	return strings.Join(s, "")
 }
@@ -766,6 +783,18 @@ func (m *NamespaceInfo) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if m.SupportsSchedules {
+		i--
+		if m.SupportsSchedules {
+			dAtA[i] = 1
+		} else {
+			dAtA[i] = 0
+		}
+		i--
+		dAtA[i] = 0x6
+		i--
+		dAtA[i] = 0xa0
+	}
 	if len(m.Id) > 0 {
 		i -= len(m.Id)
 		copy(dAtA[i:], m.Id)
@@ -1091,6 +1120,9 @@ func (m *NamespaceInfo) Size() (n int) {
 	if l > 0 {
 		n += 1 + l + sovMessage(uint64(l))
 	}
+	if m.SupportsSchedules {
+		n += 3
+	}
 	return n
 }
 
@@ -1223,6 +1255,7 @@ func (this *NamespaceInfo) String() string {
 		`OwnerEmail:` + fmt.Sprintf("%v", this.OwnerEmail) + `,`,
 		`Data:` + mapStringForData + `,`,
 		`Id:` + fmt.Sprintf("%v", this.Id) + `,`,
+		`SupportsSchedules:` + fmt.Sprintf("%v", this.SupportsSchedules) + `,`,
 		`}`,
 	}, "")
 	return s
@@ -1608,6 +1641,26 @@ func (m *NamespaceInfo) Unmarshal(dAtA []byte) error {
 			}
 			m.Id = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
+		case 100:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field SupportsSchedules", wireType)
+			}
+			var v int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowMessage
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				v |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			m.SupportsSchedules = bool(v != 0)
 		default:
 			iNdEx = preIndex
 			skippy, err := skipMessage(dAtA[iNdEx:])
